"Added Meme Pics"

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Meme Generator</title>
 </head>
 <body>
+
     <header class="flex space-around align-center">
         <h1>Meme Generator</h1>
         <label for="menu-checklist" class="nav-menu-toggle-label"><i class="fas fa-bars"></i></label>
@@ -20,5 +21,22 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section class="main-gallery">
+            <ul class="clean-list">
+                <li><a><img src="imgs/004.jpg"/></a></li>
+            </ul>
+        </section>
+
+        <section class="meme-editor-canvas container">
+            <canvas id="meme-canvas" width="300" height="300">
+
+            </canvas>
+            <div class="meme-editor container">
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
