--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 
     <main>
             <ul class="clean-list main-gallery">
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item">
+                    <a>
+                        <img src="imgs/004.jpg" />
+                    </a>
+                </li>
                 <li class="gallery-item"><a><img src="imgs/005.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/12.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/Ancient-Aliens.jpg" /></a></li>
