"GALLERY LAYOUT FUKING COMPLETED"

--- a/index.html
+++ b/index.html
@@ -36,14 +36,22 @@
 
     <main>
             <ul class="clean-list main-gallery">
-                <li class="gallery-item">
-                    <a>
-                        <img src="imgs/004.jpg" />
-                    </a>
-                </li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/005.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/12.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/Ancient-Aliens.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/005.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/12.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/Ancient-Aliens.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
+                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
                 <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
