Image Gallery is now dynamically generated

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
             </ul>
 
-        <section class="meme-editor-canvas container">
+        <section class="meme-editor-canvas container flex flex-column align-center">
             <canvas onclick="onDrawText(event)" id="meme-canvas" width="300" height="300">
                     
             </canvas>
@@ -108,8 +108,8 @@
         </section>
     </main>
     <script src="js/util.js"></script>
-    <script src="js/meme-editor-controller.js"></script>
     <script src="js/meme-editor-service.js"></script>
+    <script src="js/meme-editor-controller.js"></script>
 </body>
 
 </html>
