Created keyword data service

--- a/index.html
+++ b/index.html
@@ -35,35 +35,7 @@
     </header>
 
     <main>
-            <ul class="clean-list main-gallery">
-                <li class="gallery-item">
-                    <a>
-                        <img src="imgs/004.jpg" />
-                    </a>
-                </li>
-                <li class="gallery-item"><a><img onclick="drawImage('imgs/005.jpg')"src="imgs/005.jpg" /></a></li>
-                <li class="gallery-item"><a><img onclick="drawImage('imgs/12.jpg')" src="imgs/12.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/005.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/12.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/Ancient-Aliens.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/005.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/12.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/Ancient-Aliens.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-                <li class="gallery-item"><a><img src="imgs/004.jpg" /></a></li>
-            </ul>
+        <ul class="clean-list main-gallery"></ul>
 
         <section class="meme-editor-canvas container flex flex-column align-center">
             <canvas onclick="onDrawText(event)" id="meme-canvas" width="300" height="300">
