--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
         
             </canvas>
             <div class="meme-editor container">
-                <div class="clear-canvas">
-                    <button class="clear-canvas-btn" onclick="clearCanvas()">Clear Canvas</button>
-                </div>
                 <div class="image-change">
                     <a href="#">
                         Change Image
@@ -54,7 +51,7 @@
                     <label for="text-add">
                         Write Meme
                     </label>
-                    <input type="text" class="text-add" onkeyup="onChangeText()">
+                    <input type="text" class="text-add" onkeyup="onWriteText()">
                 </div>
                 <div class="font-size-div">
                     Change Font Size: 
@@ -76,14 +73,8 @@
                         <option value="tahoma">Tahoma</option>
                     </select>
                 </div>
-                <div class="font-style">
-                    Change Font Style:
-                    <button onclick="onChangeStyle('bold')" class="style-bold">Bold</button>
-                    <button onclick="onChangeStyle('italic')" class="style-italic">Italic</button>
-                    <button onclick="onChangeStyle('uppercase')" class="style-uppercase">Upper Case</button>
-                </div>
-                <div class="font-border">
-                    <button onclick="onToggleTextBorder()" class="font-border-btn">Font Border</button>
+                <div class="clear-canvas">
+                    <button class="clear-canvas-btn" onclick="clearCanvas()">Clear Meme Editor</button>
                 </div>
                 <div class="download-meme">
                         <a class="download-link" href="#" onclick="downloadImg(this)" download="">Download</a>
