"added search by keyword"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <input id="menu-checklist" type="checkbox" name="checklist">
         <nav>
             <ul class="clean-list nav-menu">
+                <li class="list-item flex align-center space-around">
+                        <label for="keyword-search">Search</label>
+                        <input type="text" id="keyword-search" placeholder="Eg: simply">
+                </li>
+
                 <li class="list-item flex align-center">
                     <a href="#" class="flex justify-center align-center">
                         <div>Image Gallery</div>
