"Added famous keyword display"

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
     </header>
 
     <main>
+        <div class="keyword-search-container flex justify-center flex-column align-center">
+            <label for="keyword-search-desktop">Search</label>
+            <input type="text" id="keyword-search-desktop" placeholder="Filter By Keyword">
+            <div class="famous-keyword-container flex align-center space-around flex-wrap"></div>
+        </div>
+
         <ul class="clean-list main-gallery"></ul>
 
         <section class="meme-editor-canvas container flex flex-column align-center">
