canvas css changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="meme-editor-canvas container flex flex-column align-center">
             <canvas onclick="onDrawText(event)" id="meme-canvas" width="300" height="300">   
             </canvas>
-            <div class="meme-editor container flex flex-column">
+            <div class="meme-editor container flex ">
                 <div class="image-change">
                     <a href="#"> Change Image </a>
                 </div>
@@ -84,7 +84,6 @@
                         <option value="lato">Lato</option>
                     </select>
                 </div>
-                
                 <div class="clear-canvas">
                     <button class="clear-canvas-btn" onclick="clearCanvas()">Clear Meme Editor</button>
                 </div>
