--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <label for="text-add">
                         Write Meme
                     </label>
-                    <input type="text" class="text-add" onkeyup="onWriteText()">
+                    <input type="text" class="text-add" data-txt-id="1" onkeyup="onWriteText(this)">
                 </div>
                 <div class="font-size-div">
                     Change Font Size: 
