--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="clean-list nav-menu">
                 <li class="list-item flex align-center space-around">
                         <label for="keyword-search">Search</label>
-                        <input type="text" id="keyword-search" placeholder="Eg: simply">
+                        <input type="text" id="keyword-search" placeholder="Keyword to Search">
                 </li>
 
                 <li class="list-item flex align-center">
