reolved funny text bug

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="add-text-div editor-properties">
                     <label for="add-text"> Write Meme </label>
                     <input type="text" class="add-text" onkeyup="onChangeText(this.value)">
-                    <button class="add-text" onclick="onaddText()">+</button>
+                    <button class="add-text" onclick="onAddText()">Add Word</button>
                 </div>
                 <div class="font-size editor-properties"> 
                     <label for="font-size-change">Font Size: </label>
