--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                     <div class="add-text-div editor-properties">
                         <label for="add-text"> Write Meme </label>
                         <input type="text" class="add-text" onkeyup="onChangeText(this.value)">
-                        <button class="add-text" onclick="onAddText()"> &plus; </button>
+                        <button class="add-text-button" onclick="onAddText()"> &plus; Add New Line </button>
                     </div>
                     <div class="font-size editor-properties">
                         <label for="font-size-change">Font Size: </label>
-                        <input type="number" class="font-size-change" onkeyup="onChangeFontSize(this.value)" placeholder="10"
+                        <input type="number" class="font-size-change" onkeyup="onChangeFontSize(this.value)" placeholder="50"
                             min="10">
                     </div>
                     <div class="font-color editor-properties">
